deps/v8/test/message/fail/redeclaration5.out
*%(basename)s:6: SyntaxError: Identifier 'foo' has already been declared
function foo() {}
^
SyntaxError: Identifier 'foo' has already been declared

